# Soft-Actor-Critic

./: .editorconfig  .gitignore  README.md  main.py  pyproject.toml  style.sh  test.py
SAC/: __init__.py  _lib_check.py  _network.py  agent.py  buffer.py  config.py  datamodule.py  networks.py  objectives.py  tester.py  trainer.py
configs/: config.yaml  train.yaml
docs/: README_en.md
parameters/: ll_cont_solved_params.ckpt
