[project]
name = "soft-actor-critic"
version = "1.0.0"
description = "Skeleton code"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "hydra-core>=1.3.2",
    "numpy>=2.4.4",
    "pytorch-lightning>=2.6.1",
    "torch>=2.11.0",
    "wandb>=0.25.1",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "gymnasium[box2d,mujoco]>=1.2.3",
    "ruff>=0.15.9",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.black]
line-length = 88
target-version = ['py311']
